Create invitations and activate users
